add new site on beesbot

--- a/source/_layouts/_nav.erb
+++ b/source/_layouts/_nav.erb
@@ -5,10 +5,13 @@
 
   <div class="nav-links">
   <% link_to '/' do %>
-    <i class="fa fa-star"></i> Home
+    <i class="fa fa-star"></i> About Us
   <% end %>
-  <% link_to '/docs/' do %>
-    <i class="fa fa-eye"></i> Docs
+  <% link_to '/' do %>
+    <i class="fa fa-eye"></i> Contact
+  <% end %>
+   <% link_to '/' do %>
+    <i class="fa fa-eye"></i> Payroll
   <% end %>
   </div>
   <div class="mobile-menu"><i class="fa fa-navicon"></i></div>
