--- a/source/_layouts/_nav.erb
+++ b/source/_layouts/_nav.erb
@@ -1,16 +1,16 @@
 <nav class="site-nav" role="navigation">
-  <% link_to 'https://github.com/dnajd/middleman-loaded', class: 'navbar-brand', target: '_blank' do %>
-    <i class="fa fa-flask"></i>
+  <% link_to '/', class: 'navbar-brand' do %>
+    <i class="fa fa-money"></i>
   <% end %>
 
   <div class="nav-links">
   <% link_to '/' do %>
     <i class="fa fa-star"></i> About Us
   <% end %>
-  <% link_to '/' do %>
+  <% link_to 'contact' do %>
     <i class="fa fa-eye"></i> Contact
   <% end %>
-   <% link_to '/' do %>
+   <% link_to 'payroll' do %>
     <i class="fa fa-eye"></i> Payroll
   <% end %>
   </div>
