--- a/source/assets/stylesheets/bitters/_variables.scss
+++ b/source/assets/stylesheets/bitters/_variables.scss
@@ -18,6 +18,7 @@ $white: #fff;
 $white-smoke: #eee;
 $blue: #477DCA;
 $dark-gray: #333;
+$dark-blue: #003469;
 $medium-gray: #999;
 $light-gray: #DDD;
 $light-red: #FBE3E4;
