--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -1,3 +1,20 @@
 ---
 title: Middleman is Loaded
 ---
+<br />
+<div class="container module">
+	<h1>contact</h1>		 
+<div class="drdot">
+<hr>
+</div>
+<div class="node">
+<div class="content"><p>Robert Bruce CPA</p>
+<p>4549 Francis Avenue<br>
+Chino, California 91710</p>
+<p>Phone (909) 548-3311</p>
+<p>Fax   (909) 548-6322</p>
+<p>E-Mail <a href="mailto:Robertbrucecpa@gmail.com">Robertbrucecpa@gmail.com</a></p>
+</div>  
+</div>
+</div>
+</div>
