--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -6,30 +6,45 @@ title: Middleman is Loaded
 
 		<!--<i class="fa fa-spoon fa-3x"></i>-->
 		<div class="hero-copy">
-			<h1>Robert Bruce CPA</h1>
+			<a><h1>Robert Bruce CPA</h1></a>
 			<p>LET ME BE YOUR PERSONAL CPA</p>	
 		</div>
 	</div>
 </div>
 <br />
 <div class="container module">
-<section>
+<section class="blockcontent">
   <aside>
 	<h2 class="login">User login</h2><!--block title-->
-	<div class="blockcontent"><form action="/?q=node/1&amp;destination=node%2F1" accept-charset="UTF-8" method="post" id="user-login-form">
-	<div><div class="form-item" id="edit-name-wrapper">
-	<label for="edit-name">Username: <span class="form-required" title="This field is required.">*</span></label>
-	<input type="text" maxlength="60" name="name" id="edit-name" size="15" value="" class="form-text required">
-	</div>
-	<div class="form-item" id="edit-pass-wrapper">
-	<label for="edit-pass">Password: <span class="form-required" title="This field is required.">*</span></label>
-	<input type="password" name="pass" id="edit-pass" maxlength="60" size="15" class="form-text required">
-	</div>
-	<input type="submit" name="op" id="edit-submit" value="Log in" class="form-submit">
-	<div class="item-list"><ul><li class="first last"><a href="/?q=user/password" title="Request new password via e-mail.">Request new password</a></li>
-	</ul></div><input type="hidden" name="form_build_id" id="form-d84c905c216873ac50e7bf795f6d1570" value="form-d84c905c216873ac50e7bf795f6d1570">
-	<input type="hidden" name="form_id" id="edit-user-login-block" value="user_login_block">
-	</div></form>
+	
+		<form action="/?q=node/1&amp;destination=node%2F1" accept-charset="UTF-8" method="post" id="user-login-form">
+			<div>
+				<div class="form-item" id="edit-name-wrapper">
+					<label for="edit-name">Username: <span class="form-required" title="This field is required.">*</span></label>
+					<input type="text" maxlength="60" name="name" id="edit-name" size="15" value="" class="form-text required">
+				</div>
+
+				<div class="form-item" id="edit-pass-wrapper">
+					<label for="edit-pass">Password: <span class="form-required" title="This field is required.">*</span></label>
+					<input type="password" name="pass" id="edit-pass" maxlength="60" size="15" class="form-text required">
+				</div>
+
+			<input type="submit" name="op" id="edit-submit" value="Log in" class="form-submit">
+
+				<div class="item-list">
+					<ul>
+						<li class="first last">
+							<a href="/?q=user/password" title="Request new password via e-mail.">      Request new password
+							</a>
+						</li>
+					</ul>
+				</div>
+			<input type="hidden" name="form_build_id" id="form-d84c905c216873ac50e7bf795f6d1570" value="form-d84c905c216873ac50e7bf795f6d1570">
+
+			<input type="hidden" name="form_id" id="edit-user-login-block" value="user_login_block">
+
+			</div>
+		</form>
   </aside>
 
 	<article>
@@ -47,4 +62,5 @@ title: Middleman is Loaded
 		<p>(909) 548-3311</p>
 		<p><a href="mailto:robertbrucecpa@gmail.com">robertbrucecpa@gmail.com</a></p>
 	<article>
+	</dection>
 </div>
