--- a/source/payroll.html.erb
+++ b/source/payroll.html.erb
@@ -1,3 +1,18 @@
 ---
 title: Middleman is Loaded
 ---
+<br />
+<div class="container module">
+
+
+
+<h1>payroll</h1>		 
+
+<hr>
+       
+<div class="content">
+	<p>For payroll information or help please call us at (909) 548-3311</p>
+	<p>Coming Soon</p>
+	<p>Automated Payroll Link</p>
+</div>   
+
