--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -53,7 +53,7 @@ title: Robert Bruce CPA
 		<p>Robert Bruce CPA</p>
 		<p>3811 Schaefer Ave ste L</p>
 		<p>Chino Ca 91710</p>
-		<p>(909) 548-3311</p>
+		<a href="tel:9095483311">(909) 548-3311</a>
 		<p><a href="mailto:robertbrucecpa@gmail.com">robertbrucecpa@gmail.com</a></p>
 	<article>
 	</dection>
