--- a/source/payroll.html.erb
+++ b/source/payroll.html.erb
@@ -6,7 +6,7 @@ title: Middleman is Loaded
 <h1>payroll</h1>		 
 <hr>     
 <div class="content">
-	<p>For payroll information or help please call us at (909) 548-3311</p>
+	<p>For payroll information or help please call us at <a href="tel:9095483311">(909) 548-3311</a></p>
 	<p>Coming Soon</p>
 	<p>Automated Payroll Link</p>
 </div>   
