--- a/source/assets/stylesheets/site/_site.scss
+++ b/source/assets/stylesheets/site/_site.scss
@@ -93,6 +93,12 @@
   	 }
   	}
   article {
+    h1 {
+      font-size: 1.3em;
+      @include media($large-screen) { 
+      font-size: 2em;
+    }
+    }
   @include media($large-screen) { 
   	@include span-columns(9); 
   }
