--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,60 +1,48 @@
 ---
 title: Robert Bruce CPA
 ---
-<div class="hero" "hero-overflow">
-	<div class="hero-inner">
-
-		<!--<i class="fa fa-spoon fa-3x"></i>-->
+<div class="hero">
+	<div class="container">
 		<div class="hero-copy">
-			<a><h1>Robert Bruce CPA</h1></a>
-			<p>LET ME BE YOUR PERSONAL CPA</p>	
+			<h1>Your Personal CPA</h1>
+			<p>Taxes, Business, and Real-Estate</p>
 		</div>
 	</div>
 </div>
 <br />
-<div class="container module">
-<section class="blockcontent">
-  <aside>
-	<h2 class="login">User login</h2><!--block title-->
-	
-		<form>
-			<div>
-				<label for="edit-name">Username: <span class="form-required" title="This field is required.">*</span>
-				</label>
+<div class="container">
+  <div class="col-container">
+  	<div class="col-left">
 
-				<input type="text" maxlength="60" name="name" id="edit-name" size="15" value="" class="form-text required">
-			</div>
+      <h1>Call Now</h1>
+      <p>
+        For your free consultation<br /><br />
 
-				<div class="form-item" id="edit-pass-wrapper">
-					<label for="edit-pass">Password: <span class="form-required" title="This field is required.">*</span></label>
-					<input type="password" name="pass" id="edit-pass" maxlength="60" size="15" class="form-text required">
-				</div>
+        <b>Robert Bruce CPA</b><br />
+        3811 Schaefer Ave ste L<br />
+        Chino, Ca. 91710<br />
+        <a href="tel:9095483311">(909) 548-3311</a><br />
+        <a href="mailto:robertbrucecpa@gmail.com">robertbrucecpa@gmail.com</a>
+      </p>
 
-				<div class="item-list">
-					<ul>
-						<li class="first last">
-							<a href="/?q=user/password" title="Request new password via e-mail.">      Request new password
-							</a>
-						</li>
-					</ul>
-				</div>
-			</form>
-  </aside>
+      <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcS5skBnq6pPokPWStoQzG1mgD6FxqfFYwvdumWpbRVUlblea76Llw" />
+  	</div>
 
-	<article>
-		<h1>LET ME BE YOUR PERSONAL CPA</h1>		 
-		<hr>
-		<p>Welcome to Robert Bruce CPA.  We are a small accounting firm that specialize in taxation, business solutions, and real-estate issues.  Our firm has a philosophy of value added accounting. This means that we work with our clients to improve their business and tax situations and look for way to make it profitable for clients to choose our services.  Our business is so closely related to the affairs of our clients that we understand that if our clients do not succeed we will not succeed.  </p>
-		<p>We provide services to a variety of clients from individuals and sole-proprietorship's, corporations, partnerships,  LLC's, trusts and estates.  We service the tax, finance and accounting needs of the company as well as that of the owners and shareholders.  We also help individuals who just want the peace of mind of having professionals handle their individual tax needs.  </p>
-		<p>We also can help those individuals and businesses that have not filed their tax returns for several years or who have already received notices from the Internal Revenue Service or from one of the states taxing authorities ( Franchise Tax Board, Board of Equalization or Franchise Tax Board).  We help our clients negotiate with these agencies, amend incorrect filings, and setup payment plans.  It is never too late to file your tax return or start dealing with the IRS or other taxing agencies.</p>
-		<p>In addition to tax issues we provide, bookkeeping, accounting, payroll and consulting services.  We can handle all of your accounting needs or can help setup a system in your office.  This gives clients the ability to have us handle all their accounting needs or we can help setup a computerized network to handle much of your accounting in house.  We are experts in Quickbooks Peachtree and a variety of other software packages.  </p>
-		<p>We offer free consultations for those looking for a new or their first accounting firm.</p>
-		<p>Please feel free to contact us.</p>
-		<p>Robert Bruce CPA</p>
-		<p>3811 Schaefer Ave ste L</p>
-		<p>Chino Ca 91710</p>
-		<a href="tel:9095483311">(909) 548-3311</a>
-		<p><a href="mailto:robertbrucecpa@gmail.com">robertbrucecpa@gmail.com</a></p>
-	<article>
-	</dection>
+    <div class="col-right">
+      <h1>Your Personal CPA</h1>
+      <p>
+        A small accounting firm that specialize in taxation, business solutions, and real-estate issues.  Our firm has a philosophy of value added accounting. This means that we work with our clients to improve their business and tax situations and look for way to make it profitable for clients to choose our services.  Our business is so closely related to the affairs of our clients that we understand that if our clients do not succeed we will not succeed.
+      </p>
+      <blockquote></blockquote>
+      <p>
+        We provide services to a variety of clients from individuals and sole-proprietorship's, corporations, partnerships,  LLC's, trusts and estates.  We service the tax, finance and accounting needs of the company as well as that of the owners and shareholders.  We also help individuals who just want the peace of mind of having professionals handle their individual tax needs.
+      </p>
+      <p>
+        We also can help those individuals and businesses that have not filed their tax returns for several years or who have already received notices from the Internal Revenue Service or from one of the states taxing authorities ( Franchise Tax Board, Board of Equalization or Franchise Tax Board).  We help our clients negotiate with these agencies, amend incorrect filings, and setup payment plans.  It is never too late to file your tax return or start dealing with the IRS or other taxing agencies.
+      </p>
+      <p>
+        In addition to tax issues we provide, bookkeeping, accounting, payroll and consulting services.  We can handle all of your accounting needs or can help setup a system in your office.  This gives clients the ability to have us handle all their accounting needs or we can help setup a computerized network to handle much of your accounting in house.  We are experts in Quickbooks Peachtree and a variety of other software packages.
+      </p>
+    </div>
+  </div>
 </div>
