--- a/source/_layouts/_nav.erb
+++ b/source/_layouts/_nav.erb
@@ -1,17 +1,17 @@
 <nav class="site-nav" role="navigation">
   <% link_to '/', class: 'navbar-brand' do %>
-    <i class="fa fa-money"></i>
+    Robert Bruce CPA
   <% end %>
 
   <div class="nav-links">
   <% link_to '/' do %>
-    <i class="fa fa-star"></i> About Us
+    About Us
   <% end %>
   <% link_to 'contact' do %>
-    <i class="fa fa-eye"></i> Contact
+    Contact
   <% end %>
    <% link_to 'payroll' do %>
-    <i class="fa fa-eye"></i> Payroll
+    Payroll
   <% end %>
   </div>
   <div class="mobile-menu"><i class="fa fa-navicon"></i></div>
