more minor tweaks

--- a/source/_layouts/_nav.erb
+++ b/source/_layouts/_nav.erb
@@ -5,13 +5,10 @@
 
   <div class="nav-links">
   <% link_to '/' do %>
-    About Us
+    Home
   <% end %>
-  <% link_to 'contact' do %>
-    Contact
-  <% end %>
-   <% link_to 'payroll' do %>
-    Payroll
+  <% link_to 'about' do %>
+    About
   <% end %>
   </div>
   <div class="mobile-menu"><i class="fa fa-navicon"></i></div>
